src/modules/75-cd/components/ServiceOverrides/components/ListRows/ListRows.module.scss
.list-row-container {
  /* 43px is the height of the tabs
   * 20px is the default top margin of tab panel 
   * 49px is the height of the new override button with bottom padding
   * 50px is the height of the headers
   */
  height: calc(100vh - var(--page-header-height) - 43px - 20px - 49px - 50px);
  overflow-y: scroll;
}

.list-row-card {
  width: 100%;
  border-radius: 0px !important;
  border-left: 4px solid var(--primary-3) !important;
}

.top-margin {
  margin-top: var(--spacing-medium);
}

.top-border-radius {
  border-radius: 2px 2px 0 0 !important;
}

.bottom-border-radius {
  border-radius: 0 0 2px 2px !important;
}

.rounded-card {
  border-radius: 2px !important;
}

.new-or-edit-card {
  border: 1px solid var(--primary-7) !important;
}

.editable-row {
  :global {
    .bp3-form-group {
      margin: 0 !important;
    }

    .TextInput--main {
      margin-bottom: 0;
    }
  }
}

.flex-wrap {
  flex-wrap: wrap !important;
}

.flex-grow {
  flex-grow: 1 !important;
}

